--- a/manifest.json
+++ b/manifest.json
@@ -1,33 +1,31 @@
 {
   "name": "No More MarketPlace ",
-  "action": {},
   "manifest_version": 3,
-  "version": "0.1",
+  "version": "1.1",
   "description": "Search Results on TheWarehouse.co.nz will not show marketplace items by default",
-  "host_permissions" : ["https://*.thewarehouse.co.nz/*"],
+  "host_permissions": ["https://*.thewarehouse.co.nz/*"],
   "content_scripts": [
     {
-        "matches": ["https://*.thewarehouse.co.nz/*"],
-        "css": ["./styles.css"]
+        "matches": ["https://*.google.com/*"],
+        "js": ["content.js"]
     }
 ],
-  "icons" : { 
-  "16" : "/images/16.png",
-  "32" : "/images/32.png"
+  "background": {
+    "service_worker": "background.js"
   },
 
-  "declarative_net_request" : {
-    "rule_resources" : [
-    {
-      "id": "ruleset_2",
-      "enabled": true,
-      "path": "rules_2.json"
-    }
-  ]
+  "action": {
+    "default_title": "popupevent",
+    "default_popup": "popup.html"
   },
-  "permissions": [
-    "declarativeNetRequest",
-    "*://thewarehouse.co.nz/*"
-  ]
+  "icons": {
+    "16": "/icons/icon16.png",
 
-  }
+    "38": "/icons/icon38.png",
+
+    "48": "/icons/icon48.png",
+   "128": "/icons/icon128.png"
+ },
+ 
+  "permissions": ["declarativeNetRequest", "storage" , "*://thewarehouse.co.nz/*"]
+}
