--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,30 @@
 {
-  "name": "No More MarketPlace ",
+  "name": "No More MarketPlace",
   "manifest_version": 3,
   "version": "1.1",
   "description": "Search Results on TheWarehouse.co.nz will not show marketplace items by default",
   "host_permissions": ["https://*.thewarehouse.co.nz/*"],
   "content_scripts": [
     {
-        "matches": ["https://*.google.com/*"],
-        "js": ["content.js"]
+      "matches": ["https://*.thewarehouse.co.nz/*"],
+      "js": ["content.js"]
     }
-],
+  ],
   "background": {
     "service_worker": "background.js"
   },
-
   "action": {
     "default_title": "popupevent",
     "default_popup": "popup.html"
   },
   "icons": {
     "16": "/icons/icon16.png",
-
     "38": "/icons/icon38.png",
-
     "48": "/icons/icon48.png",
-   "128": "/icons/icon128.png"
- },
- 
-  "permissions": ["declarativeNetRequest", "storage" , "*://thewarehouse.co.nz/*"]
+    "128": "/icons/icon128.png"
+  },
+  "permissions": [
+    "declarativeNetRequest",
+    "storage"
+  ]
 }
